--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,10 @@
 *.unity	merge=unity
 *.prefab merge=unity
 framework/src/csharp/HiddenSwitch/Framework/Plugins/Grpc.Core/runtimes/**/*.dylib filter=lfs diff=lfs merge=lfs -text
-*.so filter=lfs diff=lfs merge=lfs -text
 framework/src/csharp/HiddenSwitch/Framework/Plugins/Grpc.Core/runtimes/ios/libgrpc.a filter=lfs diff=lfs merge=lfs -text
+*.so filter=lfs diff=lfs merge=lfs -text
 *.a filter=lfs diff=lfs merge=lfs -text
+*.dylib filter=lfs diff=lfs merge=lfs -text
+*.bundle filter=lfs diff=lfs merge=lfs -text
+spellsource-protos/src/csharp/HiddenSwitch/Framework/Plugins/Grpc.Core/runtimes/**/*.dylib filter=lfs diff=lfs merge=lfs -text
+spellsource-protos/src/csharp/HiddenSwitch/Framework/Plugins/Grpc.Core/runtimes/ios/libgrpc.a filter=lfs diff=lfs merge=lfs -text
