Setup Graal support

--- a/settings.gradle
+++ b/settings.gradle
@@ -24,3 +24,4 @@ include 'spellsource-client'
 include 'spellsource-game-benchmarks'
 include 'spellsource-server-deployment'
 include 'spellsource-private'
+include 'spellsource-web-cardeditor-support'
