--- a/www/package.json
+++ b/www/package.json
@@ -14,11 +14,11 @@
     "blockly": "^3.20200924.2",
     "canvas": "^2.6.1",
     "enumify": "^2.0.0",
-    "gatsby": "^2.20.24",
+    "gatsby": "^2.32.12",
     "gatsby-image": "^2.2.41",
     "gatsby-plugin-anchor-links": "^1.1.1",
     "gatsby-plugin-flow": "^1.3.11",
-    "gatsby-plugin-s3": "^0.3.3",
+    "gatsby-plugin-s3": "^0.3.8",
     "gatsby-plugin-sass": "^2.1.29",
     "gatsby-plugin-sharp": "^2.4.5",
     "gatsby-remark-autolink-headers": "^2.3.7",
@@ -30,16 +30,17 @@
     "gatsby-transformer-sharp": "^2.3.16",
     "lodash": "^4.17.15",
     "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-ace": "^8.1.0",
-    "react-blockly": "^5.0.0",
-    "react-bootstrap": "^1.0.1",
-    "react-dom": "^16.13.0",
+    "react": "^16.14.0",
+    "react-ace": "^9.4.0",
+    "react-blockly": "^6.0.1",
+    "react-bootstrap": "^1.5.2",
+    "react-dom": "^16.14.0",
     "react-loadable": "^5.5.0",
     "react-reconciler": "^0.25.1",
     "react-spring": "^8.0.27",
     "recursive-omit-by": "^2.0.0",
-    "string-format": "^2.0.0"
+    "string-format": "^2.0.0",
+    "typescript": "^2.7.2"
   },
   "devDependencies": {
     "babel-jest": "^26.0.0",
@@ -50,8 +51,5 @@
     "jest": "^26.0.0",
     "react-test-renderer": "^16.13.1",
     "standard": "^14.3.1"
-  },
-  "optionalDependencies": {
-    "java": "^0.12.1"
   }
 }
