--- a/spellsource-protos/build.gradle
+++ b/spellsource-protos/build.gradle
@@ -24,6 +24,11 @@ apply plugin: 'idea'
 
 def isWindows = Os.isFamily(Os.FAMILY_WINDOWS)
 def csharpRootDir = 'src/csharp/HiddenSwitch'
+def dotnetCmd = ["$project.rootProject.projectDir/bin/dotnet"]
+if (isWindows) {
+    dotnetCmd = ["$project.rootProject.projectDir/bin/bash.exe"] + dotnetCmd
+}
+def csharpGrpcPath = project.rootProject.projectDir.absolutePath + "/bin/grpc_csharp_plugin" + (isWindows ? ".exe" : "")
 
 dependencies {
     api group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
@@ -76,13 +81,16 @@ task copyCsharpGrpc(type: Copy, group: 'build') {
     into(csharpRootDir + '/Framework/')
 }
 
-def dotnetCmd = isWindows ? "C:\\Program Files\\dotnet\\dotnet.exe" : "$project.projectDir/bin/dotnet"
-
 task dll(type: Exec, group: 'build') {
     dependsOn copyCsharpGrpc
     workingDir csharpRootDir
+    outputs.dir("$project.buildDir/dlls")
+    inputs.dir("$csharpRootDir/Framework/Plugins")
+    inputs.file("$csharpRootDir/HiddenSwitch.sln")
+    inputs.file("$csharpRootDir/Framework/Framework.csproj")
+    inputs.files("$csharpRootDir/Framework/*.cs")
     // this is using docker-wrapped dotnet
-    commandLine dotnetCmd, 'publish', '--output', isWindows ? "$project.buildDir/dlls" : "/git/spellsource-protos/build/dlls"
+    commandLine dotnetCmd + ['publish', '--output', "/git/spellsource-protos/build/dlls"]
 }
 
 task testDll(type: Exec, group: 'verification') {
@@ -91,7 +99,7 @@ task testDll(type: Exec, group: 'verification') {
     outputs.dir("$project.buildDir/nunit")
     workingDir csharpRootDir
     // this is using docker-wrapped dotnet
-    commandLine dotnetCmd, 'test', '--results-directory', isWindows ? "$project.buildDir/nunit" : "/git/spellsource-protos/build/nunit"
+    commandLine dotnetCmd + ['test', '--results-directory', "/git/spellsource-protos/build/nunit"]
 }
 
 task installDll(type: Copy) {
@@ -110,8 +118,6 @@ task protosChanged(group: 'Spellsource') {
     description('Run whenever the files in src/main/proto have been changed. Recreates the models and updates the client.')
     dependsOn += [installDll, ':spellsource-protos:generateProto']
 }
-
-def csharpGrpcPath = project.projectDir.absolutePath + "/bin/grpc_csharp_plugin" + (isWindows ? ".exe" : "")
 
 protobuf {
     protoc {
