--- a/spellsource-protos/build.gradle
+++ b/spellsource-protos/build.gradle
@@ -15,7 +15,7 @@ buildscript {
 }
 
 plugins {
-    id 'com.google.protobuf' version '0.8.13'
+    id 'com.google.protobuf' version '0.8.16'
 }
 
 apply plugin: 'com.google.protobuf'
@@ -28,7 +28,7 @@ def dotnetCmd = ["$project.rootProject.projectDir/bin/dotnet"]
 if (isWindows) {
     dotnetCmd = ["$project.rootProject.projectDir/bin/bash.exe"] + dotnetCmd
 }
-def csharpGrpcPath = project.rootProject.projectDir.absolutePath + "/bin/grpc_csharp_plugin" + (isWindows ? ".exe" : "")
+def csharpGrpcPath = "$project.rootProject.projectDir/bin/grpc_csharp_plugin" + (isWindows ? ".exe" : "")
 
 dependencies {
     api group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
