--- a/spellsource-web/package.json
+++ b/spellsource-web/package.json
@@ -10,48 +10,52 @@
   "author": "Benjamin Berman",
   "license": "AGPL-3.0-or-later",
   "dependencies": {
-    "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.3.0",
-    "acorn": "^6.4.2",
+    "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^3.0.2",
+    "@react-spring/parallax": "^9.1.2",
+    "acorn": "^8.2.4",
     "blockly": "^3.20200924.2",
     "canvas": "^2.6.1",
     "enumify": "^2.0.0",
-    "gatsby": "^2.32.12",
-    "gatsby-image": "^2.2.41",
+    "gatsby": "^3.4.2",
     "gatsby-plugin-anchor-links": "^1.1.1",
-    "gatsby-plugin-flow": "^1.3.11",
+    "gatsby-plugin-flow": "^2.4.0",
+    "gatsby-plugin-image": "^1.4.1",
     "gatsby-plugin-s3": "^0.3.8",
-    "gatsby-plugin-sass": "^2.1.29",
-    "gatsby-plugin-sharp": "^2.4.5",
-    "gatsby-remark-autolink-headers": "^2.3.7",
-    "gatsby-remark-copy-linked-files": "^2.1.37",
+    "gatsby-plugin-sass": "^4.4.0",
+    "gatsby-plugin-sharp": "^3.4.2",
+    "gatsby-remark-autolink-headers": "^4.1.0",
+    "gatsby-remark-copy-linked-files": "^4.1.0",
     "gatsby-remark-image-attributes": "^0.2.1",
-    "gatsby-remark-images": "^3.1.44",
-    "gatsby-source-filesystem": "^2.1.48",
-    "gatsby-transformer-remark": "^2.6.53",
-    "gatsby-transformer-sharp": "^2.3.16",
+    "gatsby-remark-images": "^5.1.0",
+    "gatsby-source-filesystem": "^3.4.0",
+    "gatsby-transformer-remark": "^4.1.0",
+    "gatsby-transformer-sharp": "^3.4.0",
     "lodash": "^4.17.15",
     "marked": "^2.0.3",
     "node-sass": "^4.14.1",
-    "react": "^16.14.0",
+    "react": "^17.0.2",
     "react-ace": "^9.4.0",
     "react-blockly": "^6.0.1",
     "react-bootstrap": "^1.5.2",
-    "react-dom": "^16.14.0",
+    "react-dom": "^17.0.2",
     "react-loadable": "^5.5.0",
-    "react-reconciler": "^0.25.1",
-    "react-spring": "^8.0.27",
+    "react-reconciler": "^0.26.2",
+    "react-spring": "^9.1.2",
     "recursive-omit-by": "^2.0.0",
+    "sass": "^1.32.12",
     "string-format": "^2.0.0",
-    "typescript": "^2.7.2"
+    "typescript": "^4.2.4",
+    "webpack": "^5.36.2",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "babel-jest": "^26.0.0",
-    "babel-preset-gatsby": "^0.4.0",
-    "flow-bin": "^0.130.0",
-    "gatsby-cli": "^2.12.42",
+    "babel-preset-gatsby": "^1.4.0",
+    "flow-bin": "^0.150.1",
+    "gatsby-cli": "^3.4.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.0.0",
-    "react-test-renderer": "^16.13.1",
-    "standard": "^14.3.1"
+    "react-test-renderer": "^17.0.2",
+    "standard": "^16.0.3"
   }
 }
