--- a/spellsource-web/package.json
+++ b/spellsource-web/package.json
@@ -13,8 +13,8 @@
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^3.0.2",
     "@react-spring/parallax": "^9.1.2",
     "acorn": "^8.2.4",
+    "aseprite": "^0.3.0",
     "blockly": "^3.20200924.2",
-    "canvas": "^2.6.1",
     "enumify": "^2.0.0",
     "gatsby": "^3.4.2",
     "gatsby-plugin-anchor-links": "^1.1.1",
@@ -30,9 +30,14 @@
     "gatsby-source-filesystem": "^3.4.0",
     "gatsby-transformer-remark": "^4.1.0",
     "gatsby-transformer-sharp": "^3.4.0",
+    "kaitai-struct": "^0.9.0",
     "lodash": "^4.17.15",
     "marked": "^2.0.3",
+    "node-fs-extra": "^0.8.2",
     "node-sass": "^4.14.1",
+    "pify": "^5.0.0",
+    "pixelmatch": "^5.2.1",
+    "psd.js": "^3.3.15",
     "react": "^17.0.2",
     "react-ace": "^9.4.0",
     "react-blockly": "^6.0.1",
@@ -43,6 +48,7 @@
     "react-spring": "^9.1.2",
     "recursive-omit-by": "^2.0.0",
     "sass": "^1.32.12",
+    "stream-read-all": "^3.0.1",
     "string-format": "^2.0.0",
     "typescript": "^4.2.4",
     "webpack": "^5.36.2",
