--- a/spellsource-web/plugins/gatsby-transformer-aseprite/package.json
+++ b/spellsource-web/plugins/gatsby-transformer-aseprite/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gatsby-transformer-photoshop",
+  "name": "gatsby-transformer-aseprite",
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -15,14 +15,16 @@
   "dependencies": {
     "gatsby-source-filesystem": "^3.4.0",
     "pify": "^5.0.0",
-    "psd.js": "^3.3.15",
-    "stream-read-all": "^3.0.1"
+    "sharp": "^0.28.0",
+    "kaitai-struct": "^0.9.0",
+    "pixelmatch": "^5.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.0"
+    "babel-preset-env": "^1.6.0",
+    "pixelmatch": "^5.2.1"
   }
 }
